<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
                  
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
           
            <EditText
                android:id="@+id/etFhid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:text="@string/firehallid" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etUid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="11"
                android:inputType="textAutoComplete"
                android:text="@string/userid" />

            <EditText
                android:id="@+id/etUpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textAutoComplete|textWebPassword"
                android:text="" />

            <TextView
                android:id="@+id/txtMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_credentials"
                android:textAppearance="?android:attr/textAppearanceLarge" />


    </LinearLayout>            
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/login" />
            
            <Button
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/map" />

            <Button
                android:id="@+id/btnRespond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/respond" />
            
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btnCompleteCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/complete_call" />

            <Button
                android:id="@+id/btnCancelCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/cancel_call" />
            
        </LinearLayout>
        <TextView
                android:id="@+id/display"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
